--- a/myrepo/pom.xml
+++ b/myrepo/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0</version>
   <name>myrepo</name>
   <url>http://maven.apache.org</url>
+  <plugins>
+  <plugin>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.0.1</version>
+</plugin>
+    </plugins>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
